# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.
[package]
name = "apt-transport-blob"
# This version gets set by semantic-release at the point of release.
version = "0.0.0"
edition = "2021"
authors = ["Alianza, Inc"]
license = "MIT"
homepage = "https://github.com/Metaswitch/apt-transport-blob"
repository = "https://github.com/Metaswitch/apt-transport-blob"
description = "apt-transport-blob"

[[bin]]
name = "blob"
path = "src/main.rs"

[dependencies]
# Azure SDK for Rust
azure_identity = "0.32.0"
azure_core = "0.32.0"

# Azure Storage is currently held at an older version.
# Include a version of the azure_core crate that is compatible with the
# azure_storage crate for interop.
azure_storage = "0.21.0"
azure_storage_blobs = "0.21.0"
azure_core_for_storage = { package = "azure_core", version = "0.21.0" }

# Other dependencies
async-trait = "0.1.88"
bytes = "1.9.0"
log = "0.4.22"
log4rs = { version = "1.3.0", default-features = false, features=["file_appender", "pattern_encoder"]}
nom = "8.0.0"
thiserror = "2.0.10"
tokio = { version = "1.43.1", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"
openssl = { version = "0.10.73", features = ["vendored"] }

[dev-dependencies]
env_logger = "0.11.8"
tempfile = "3.15.0"

[profile.release]
# Optimise for size
opt-level = "z"
overflow-checks = true

# Optimise size across all crates by doing link-time optimisation across all
# crates, and using 1 codegen unit to give the linker maximum opportunity to
# optimise.
lto = "fat"
codegen-units = 1

[package.metadata.deb]
assets = [
  ["target/release/blob", "usr/lib/apt/methods/blob", "755"],
]
