# Copyright (c) Alianza, Inc. All rights reserved.
# Highly Confidential Material
[package]
name = "apt-transport-blob"
# This version gets set by semantic-release at the point of release.
version = "0.0.0"
edition = "2021"
authors = ["Alianza, Inc"]
license = "MIT"
homepage = "https://github.com/Metaswitch/apt-transport-blob"
repository = "https://github.com/Metaswitch/apt-transport-blob"
description = "apt-transport-blob"

[[bin]]
name = "blob"
path = "src/main.rs"

[dependencies]
bytes = "=1.11.1"
log = "=0.4.29"
log4rs = { version = "=1.4.0", default-features = false, features = ["file_appender", "pattern_encoder"] }
nom = "=8.0.0"
reqwest = { version = "=0.13.2", default-features = false, features = ["rustls", "json", "query", "form"] }
serde = "=1.0.228"
serde_json = "=1.0.149"
thiserror = "=2.0.18"
tokio = { version = "=1.52.3", features = ["macros", "rt-multi-thread", "fs", "process"] }
url = "=2.5.8"

[dev-dependencies]
env_logger = "=0.11.10"
tempfile = "=3.24.0"

[profile.release]
# Optimise for size
opt-level = "z"
overflow-checks = true

# Optimise size across all crates by doing link-time optimisation across all
# crates, and using 1 codegen unit to give the linker maximum opportunity to
# optimise.
lto = "fat"
codegen-units = 1

[package.metadata.deb]
assets = [
  ["target/release/blob", "usr/lib/apt/methods/blob", "755"],
]
depends = "$auto"
recommends = "azure-cli"
